# resume_agent

./: .gitignore  LICENSE  README.md  cli.py  pyproject.toml  requirements.txt  resume.spec  start.ps1  start.sh  tui.py
core/: agent.py  compiler.py  config.py  extract.py  ingest.py  llm.py  paths.py  providers.py  search.py  store.py  think_graph.py
docs/demo/: README.md  demo.tape  sample-jd.txt
docs/superpowers/specs/: 2026-06-30-think-fast-mode-redesign-design.md  2026-07-04-langgraph-editor-workflow-design.md  2026-07-07-blueprint-fill-tailoring-design.md  2026-07-11-think-inline-tui-design.md  HANDOFF.md
skill/: __init__.py  render.py
tests/: test_compile_rebuild.py  test_inline_bootstrap.py  test_paths.py  test_render.py  test_search.py  test_staleness.py  test_think_graph.py  test_tui.py  test_wiki_search.py
