[project]
name = "resume-agent"
version = "0.1.0"
description = "Terminal agent that generates tailored, FAANG-style resumes from a read-only career store."
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.40.0",
    "pyyaml>=6.0",
    "python-docx>=1.1.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "markitdown[pdf,docx,pptx,xlsx]>=0.1.0",
]

[project.scripts]
resume = "cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["cli"]
packages = ["core"]
