[project]
name = "resume-agent"
version = "0.40.0"
description = "Terminal agent that generates tailored, FAANG-style resumes from a read-only career store."
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "python-docx>=1.1.0",
    "reportlab>=4.0.0",
    "langgraph>=1.0,<2.0",
    "litellm>=1.70",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0",
    "questionary>=2.0",
    "markitdown[pdf,docx,pptx,xlsx]>=0.1.0",
]

[project.scripts]
resume = "cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["cli", "tui"]
packages = ["core", "skill"]
